--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -1625,7 +1625,7 @@ display:none;
     }
     .dot_li
     {
-        padding:10px !important;
+        padding:0px 10px 10px 10px !important;
     }
     .dot_des
     {
