--- a/styles/Locuscare/Locuscare.css
+++ b/styles/Locuscare/Locuscare.css
@@ -1480,7 +1480,7 @@ svg {
     padding-left: 26% !important;
   }
   .dot_li {
-    padding: 10px !important;
+    padding: 0px 10px 10px 10px !important;
   }
   .dot_des {
     font-size: 16px !important;
