--- a/styles/managedcare/managedcare.css
+++ b/styles/managedcare/managedcare.css
@@ -887,12 +887,13 @@
   .index_head_1 .title_web_12 {
     padding-left: 0px;
     padding-right: 0px;
+    padding-top: 20px;
   }
   .index_head_1 .title_web_12 .managed_care_title_1 {
     letter-spacing: 0px;
     color: #363A57;
     opacity: 1;
-    font-size: 33px;
+    font-size: 29px;
     font-family: "fontGraphikSemibold";
     padding: 0px;
   }
