--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -967,12 +967,13 @@
     {
         padding-left:0px;
         padding-right:0px;
+        padding-top:20px;
         
         .managed_care_title_1 {
         letter-spacing: 0px;
         color: #363A57;
         opacity: 1;
-        font-size: 33px;
+        font-size: 29px;
         font-family: "fontGraphikSemibold";
         padding: 0px;
     }
