--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -443,6 +443,13 @@
 
 .img_common {
     width: 80%;
+  
+}
+
+.img_common {
+    width: 85%;
+    position:relative;
+    top:100px;
 }
 
 .index_head_1 {
