--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -886,6 +886,7 @@ svg {
     padding-top: 3%;
 
     .title {
+       
         text-align    : left;
         font-size     : 28px;
         letter-spacing: 0px;
@@ -933,6 +934,7 @@ svg {
     padding-top: 3%;
 
     .title {
+        margin-bottom: 0px;
         text-align    : left;
         font-size     : 28px;
         letter-spacing: 0px;
@@ -977,6 +979,8 @@ svg {
     }
 
     .para_1 {
+        position:relative;
+        bottom:55px;
         line-height   : 2.0rem;
         text-align    : left;
         font-family   : "fontLatoRegular";
@@ -1182,7 +1186,7 @@ display:none;
     .section_2
     {
         margin-left:0px !important;
-        padding: 0px 34px !important;
+        padding: 5px !important;
     }
     .web_launch {
         height: 600px !important;
