--- a/styles/managedcare/managedcare.css
+++ b/styles/managedcare/managedcare.css
@@ -429,6 +429,12 @@
   width: 80%;
 }
 
+.img_common {
+  width: 85%;
+  position: relative;
+  top: 100px;
+}
+
 .index_head_1 {
   margin-top: 50px;
 }
