--- a/styles/Locuscare/Locuscare.css
+++ b/styles/Locuscare/Locuscare.css
@@ -1091,10 +1091,24 @@ svg {
   display: none;
 }
 
-@media only screen and (max-width: 1442px) {
+@media only screen and (min-width: 2560px) {
+  .section_2 {
+    padding: 0px 500px !important;
+  }
+  .launch_1 {
+    margin-top: -2% !important;
+  }
+  .recep_1 {
+    width: 55% !important;
+    position: relative;
+    top: 0px !important;
+  }
+}
+
+@media only screen and (max-width: 1443px) {
   .section_2 {
     margin-left: 0px !important;
-    padding: 5px !important;
+    padding: 0px 10px !important;
   }
   .web_launch {
     height: 600px !important;
@@ -1107,7 +1121,7 @@ svg {
   }
   .section_2 {
     margin-left: 2px !important;
-    padding: 0px 20px !important;
+    padding: 0px 0px !important;
   }
   .first_se {
     padding: 0px 52px;
