--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -1071,6 +1071,14 @@
         font-weight: 400;
         font-size: 1.1rem;
     }
+    .img_common1 {
+        width: 100% !important;
+    }
+    .img_common {
+        width: 100% !important;
+        position:relative;
+        top:20px;
+    }
     .img_1
     {
         text-align: center;
