--- a/styles/casestudy/casestudy.css
+++ b/styles/casestudy/casestudy.css
@@ -1399,13 +1399,13 @@ body {
     margin-top: 30px;
   }
   .edited2_img {
-    width: 200px;
-    margin-top: 32px;
-    height: 325px;
+    width: auto;
+    margin-top: 20px;
+    height: 35%;
   }
   .edited3_img {
-    width: 80%;
-    height: 80%;
+    width: auto;
+    height: 40%;
     position: relative;
     margin-top: 20px;
   }
@@ -1434,12 +1434,20 @@ body {
     text-align: center;
   }
   .head_title {
-    font-size: 40px;
+    font-size: 35px;
     font-weight: bold;
     text-align: center;
   }
   .link {
     margin-top: 10px;
+  }
+  .view_link {
+    letter-spacing: 0px;
+    color: #665CD7;
+    opacity: 1;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: "fontLatoRegular";
   }
 }
 
@@ -1467,7 +1475,7 @@ body {
   .section_Managed {
     margin-top: 0px;
     background-color: #F27D350D;
-    height: 830px;
+    height: 900px;
     padding: 30px 30px 30px 30px;
     border-radius: 25px;
   }
@@ -1484,6 +1492,14 @@ body {
   .footer_social_media1 {
     display: none;
   }
+  .view_link {
+    letter-spacing: 0px;
+    color: #665CD7;
+    opacity: 1;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: "fontLatoRegular";
+  }
   .social_icon_link {
     padding-left: 0px !important;
     padding-right: 0px !important;
@@ -1498,7 +1514,7 @@ body {
   .section_Managed {
     margin-top: 0px;
     background-color: #F27D350D;
-    height: 850px;
+    height: 930px;
     padding: 20px 20px 20px 20px;
     border-radius: 25px;
   }
@@ -1508,6 +1524,12 @@ body {
     height: 830px;
     padding: 20px 20px 20px 20px;
     border-radius: 25px;
+  }
+  .edited3_img {
+    width: auto;
+    height: 35%;
+    position: relative;
+    margin-top: 20px;
   }
 }
 /*# sourceMappingURL=casestudy.css.map */
