--- a/styles/managedcare/managedcare.css
+++ b/styles/managedcare/managedcare.css
@@ -987,6 +987,14 @@
     font-weight: 400;
     font-size: 1.1rem;
   }
+  .img_common1 {
+    width: 100% !important;
+  }
+  .img_common {
+    width: 100% !important;
+    position: relative;
+    top: 20px;
+  }
   .img_1 {
     text-align: center;
     margin-top: 20px;
