--- a/styles/Saas_metric/Saas_metric.css
+++ b/styles/Saas_metric/Saas_metric.css
@@ -1482,6 +1482,19 @@ body {
 }
 
 @media only screen and (max-width: 426px) {
+  .header_mobile tag {
+    font-size: 10px;
+    padding: 3px 4px;
+    position: absolute;
+    top: 134px;
+    width: 69px;
+    height: 17px;
+    border-radius: 3px;
+    background-color: #16cebc;
+    line-height: 1.1;
+    color: #fff;
+    margin-left: 30px;
+  }
   .mobiletab {
     display: -webkit-box;
     display: -ms-flexbox;
