worked on changes in alignment

--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -964,10 +964,20 @@
 
 @media only screen and (max-width: 427px) {
 
+
+    .qui
+    {
+        padding-left:0px;
+    }
+    .quick_img
+    {
+        padding-left:15px !important;
+    }
  
     .index_head_1 
     {
         margin-top:50px ;
+       
 
     .title_web_12
     
