--- a/styles/managedcare/managedcare.css
+++ b/styles/managedcare/managedcare.css
@@ -887,6 +887,12 @@
 }
 
 @media only screen and (max-width: 427px) {
+  .qui {
+    padding-left: 0px;
+  }
+  .quick_img {
+    padding-left: 15px !important;
+  }
   .index_head_1 {
     margin-top: 50px;
   }
